--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <meta name="author" content="Alexander Belanger">
+        <title>CWU | Web Student</title>
     </head>
     <body>
-       Hello, World, and welcome to my first website!
+        <p>Hello, World, and welcome to my first website!</p>
+        <p>Over the next few months, I will be adding new content to this site! Check back soon!</p>
     </body>
 </html>
